# home-projects

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
pico_webserver/: index.html  main.py  wifi_secrets.py
zero_led_checks/: check_email.py  email-script.service
